# IMAS-ITER-Mapping

./: .gitignore  README.md  conftest.py  prepare-test-data.sh  pyproject.toml
.github/workflows/: test.yml
docs/: api.md  mapping.md
src/imas_iter_mapping/: __init__.py  __main__.py  cli.py  exceptions.py  mapping.py  units.py  util.py
tests/: test_calculate_streaming_metadata.py  test_cli.py  test_mapping.py  test_units.py
