[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "codac-imas-mapping"
description = "Producers and consumers of streaming IMAS data."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "CODAC-IMAS-Mapping Developers"},
]
classifiers = [
]
license = {file = "LICENSE.txt"}
dependencies = [
    "imas-python",
    "numpy",
    "pint",
    "pydantic",
    "strictyaml",
]
dynamic = ["version"]
requires-python = ">=3.11"

[project.optional-dependencies]
all = ["codac-imas-mapping[dev]"]
dev = ["codac-imas-mapping[test,linting]"]
linting = [
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-randomly",
]

[project.urls]
homepage = "https://github.com/iterorganization/CODAC-IMAS-Mapping"

[tool.setuptools.packages.find]
where = ["src"]
include = ["codac-imas-mapping*"]

[project.scripts]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = [
    "docs",
    ".git",
]
# Same as Black
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
