[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "imas-iter-mapping"
description = "Producers and consumers of streaming IMAS data."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "IMAS-ITER-Mapping Developers"},
]
classifiers = [
]
license = {file = "LICENSE.txt"}
dependencies = [
    "click",
    "imas-python",
    "numpy",
    "pint",
    "strictyaml",
    # Not yet on PyPI, install directly from git for now
    "imas-streams @ git+https://github.com/iterorganization/IMAS-Streams.git",
]
dynamic = ["version"]
requires-python = ">=3.11"

[project.optional-dependencies]
all = ["imas-iter-mapping[dev]"]
dev = ["imas-iter-mapping[test,linting]"]
linting = [
    "ruff",
]
test = [
    "imas-python[netcdf]",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-randomly",
]

[project.urls]
homepage = "https://github.com/iterorganization/IMAS-ITER-Mapping"

[tool.setuptools.packages.find]
where = ["src"]
include = ["imas_iter_mapping*"]

[project.scripts]
imas-iter-mapping = "imas_iter_mapping.cli:main"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = [
    "docs",
    ".git",
]
# Same as Black
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
